tests/transpiler/x/swift/str_builtin.error
exit status 1
/tmp/TestSwiftTranspiler_VMValid_Golden4234630740/021/main.swift:2:7: error: cannot find 'str' in scope
1 | // Generated by Mochi transpiler v0.10.31 on 2025-07-19 19:51:40 GMT+7
2 | print(str(123))
  |       `- error: cannot find 'str' in scope
3 | 
