tests/transpiler/x/swift/str_builtin.swift
// Generated by Mochi transpiler v0.10.31 on 2025-07-19 19:51:40 GMT+7
print(str(123))
